--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
     <ul>
       {% for post in site.categories.blog %}
       <li>
-        <a href="{{ post.url }}" class="title">{{ post.title }}</a>
+        <a href="/wangzhiyao/{{ post.url }}" class="title">{{ post.title }}</a>
       </li>
       {% endfor %}
     </ul>
